@@ -18,6 +18,8 @@
 package com.netflix.curator.retry;
 
 import com.google.common.annotations.VisibleForTesting;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import java.util.Random;
 
 /**
@@ -25,8 +27,14 @@ import java.util.Random;
  */
 public class ExponentialBackoffRetry extends SleepingRetry
 {
+    private static final Logger     log = LoggerFactory.getLogger(ExponentialBackoffRetry.class);
+
+    private static final int MAX_RETRIES_LIMIT = 29;
+    private static final int DEFAULT_MAX_SLEEP_MS = 60000;
+
     private final Random random = new Random();
     private final int baseSleepTimeMs;
+    private final int maxSleepMs;
 
     /**
      * @param baseSleepTimeMs initial amount of time to wait between retries
@@ -34,8 +42,19 @@ public class ExponentialBackoffRetry extends SleepingRetry
      */
     public ExponentialBackoffRetry(int baseSleepTimeMs, int maxRetries)
     {
-        super(maxRetries);
+        this(baseSleepTimeMs, maxRetries, DEFAULT_MAX_SLEEP_MS);
+    }
+
+    /**
+     * @param baseSleepTimeMs initial amount of time to wait between retries
+     * @param maxRetries max number of times to retry
+     * @param maxSleepMs max time in ms to sleep on each retry
+     */
+    public ExponentialBackoffRetry(int baseSleepTimeMs, int maxRetries, int maxSleepMs)
+    {
+        super(validateMaxRetries(maxRetries));
         this.baseSleepTimeMs = baseSleepTimeMs;
+        this.maxSleepMs = maxSleepMs;
     }
 
     @VisibleForTesting
@@ -48,6 +67,22 @@ public class ExponentialBackoffRetry extends SleepingRetry
     protected int getSleepTimeMs(int retryCount, long elapsedTimeMs)
     {
         // copied from Hadoop's RetryPolicies.java
-        return baseSleepTimeMs * Math.max(1, random.nextInt(1 << (retryCount+1)));
+        int sleepMs = baseSleepTimeMs * Math.max(1, random.nextInt(1 << (retryCount + 1)));
+        if ( sleepMs > maxSleepMs )
+        {
+            log.warn(String.format("Sleep extension too large (%d). Pinning to %d", sleepMs, maxSleepMs));
+            sleepMs = maxSleepMs;
+        }
+        return sleepMs;
+    }
+
+    private static int validateMaxRetries(int maxRetries)
+    {
+        if ( maxRetries > MAX_RETRIES_LIMIT )
+        {
+            log.warn(String.format("maxRetries too large (%d). Pinning to %d", maxRetries, MAX_RETRIES_LIMIT));
+            maxRetries = MAX_RETRIES_LIMIT;
+        }
+        return maxRetries;
     }
 }
